--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
 
-    </div>
+
 
     <div class="overflow">
       <div class="typewriter anim">
@@ -20,13 +20,54 @@
         <h1 id="secondTitle"></h1>
       </div>
 
-      <div class="typewriter anim2">
-        <h4 id=""> press enter to continue</h1>
+      <div class="typewriter anim3">
+        <h4 id="enterText"></h1>
       </div>
+    </div>
 
-    <section>
+    <div class="about-me">
+      <div class="pWidth">
+        <p>Mi nombre es Ignacio Iannello, estoy cursando el CBC para la carrera de ciencias de la computacion en la UBA.
+  Tengo 2 años de experiencia en programacion en los entornos de Android, Game development y Web development (backend y frontend)
+  realizando cursos online a traves de la plataforma de Udemy con los profesores Tim Bulchaka, Rob Percival y Angela Yu.
+  </p>
+  <p>Me considero una persona creativa a la hora de generar soluciones y me veo altamente motivado
+    en situaciones de alta presion. Por ultimo, siempre busco mantener
+    una buena comunicacion y organizacion con mis compañeros de trabajo resolviendo los problemas
+    desde los diferentes estilos de trabajo de cada uno </p>
+      </div>
+  </div>
 
-    </section>
+
+    <div class="skills">
+      <h1>SKILLS</h1>
+        <ul>
+          <li>API managment --->Medium</li>
+          <li>MYSQL,SQL ---> Medium </li>
+          <li>JS,HTML,CSS,NODEJS,NPM,EXPRESSJS ---> High </li>
+          <li>GIT,GITHUB --> Medium </li>
+          <li>JAVA,XML ---> Medium </li>
+          <li>UNITY,C# ---> Low </li>
+          <li>USE OF APIs --> Medium </li>
+
+        </ul>
+    </div>
+
+
+
+
+    <div class="projects">
+      <h1>PROJECTS</h1>
+        <ul>
+          <li><a href="https://play.google.com/store/apps/developer?id=Ignacio+Iannello&hl=en&gl=US">Play store account</a></li>
+          <li><a href="https://github.com/Iann7">Github Account</a></li>
+        </ul>
+    </div>
+
+    <div class="contact-me">
+      <h1>CONTACT ME</h1>
+      <h4>Ignacioiannello7@gmail.com</h4>
+      <h4>+541167929767</h4>
     </div>
 
 
