DELETED ABOUT SECTIONS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
   </head>
@@ -21,7 +22,15 @@
       </div>
 
       <div class="typewriter anim3">
-        <h4 id="enterText"></h1>
+        <h4 id="email"></h1>
+      </div>
+
+      <div class="typewriter anim4">
+        <h4 id="whatsapp"></h1>
+      </div>
+
+      <div class="">
+
       </div>
     </div>
 
